Resources/clean_c_files_rte/c_files_acsl_by_rte/output_altergo_tests/output_min_3_altergo.txt
[kernel] Parsing min_3_rte.c (with preprocessing)
[kernel] min_3_rte.c:1: 
  syntax error:
  Location: line 1, column 1, before or at token: [
  1     [kernel] Warning: no input file.
        ^
  2     [kernel] Parsing min_3.c (with preprocessing)
  3     [rte:annot] annotating function min
[kernel] Frama-C aborted: invalid user input.
